--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,6 +1,6 @@
 llm:
   provider: huggingface
-  model_name: meta-llama/Llama-3.1-8B-Instruct
+  model_name: mistralai/Mistral-7B-Instruct-v0.1
   temperature: 0.3
   max_tokens: 300
   top_k: 3
